docs(mop): cria documentação explicativa com motivação, objetivos e visão do projeto
